Old name in javadoc

--- a/giulius/src/main/resources/com/mastfrog/giulius/package.html
+++ b/giulius/src/main/resources/com/mastfrog/giulius/package.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Guicy</h1>
+        <h1>Giulius</h1>
         This package contains a tiny framework which sits on top of Guice and 
         allows configuration to be done using properties files.  It uses 
         Apache Commons Configuration under the hood, so configuration can
@@ -66,6 +66,6 @@ server.start();
         and for wrapping ExecutorService thread pools such that the context
         something was submitted in is reconstructed before it is run.  This
         can serve as the basis for additional frameworks on top of Guice, such
-        as Propeller.
+        as Acteur.
     </body>
 </html>
